src/test/deca/syntax/invalid/renduInter01/03missing_parent_if.deca
// Description:
//      test de programme incorrect lexicalement (il manque deux parenthèses)
//
// Resultats:
//      Erreur syntaxique
//      Ligne 10 : manque les parenthèses (=> expected '(', token 'x' inexpected)

{
    int x = 4;
    if x == 4
    {
        println("hello if", x);
    }
    else {
        println("hello else", x);
        }

}
